--- a/promql-compliance-tester.yml
+++ b/promql-compliance-tester.yml
@@ -2,6 +2,11 @@ reference_target_config:
   query_url: 'http://localhost:9090'
 
 test_target_config:
+  # UNCOMMENT FOR GRAFANA CLOUD:
+  # query_url: 'https://<cloud-instance-name>.grafana.net/api/prom'
+  # basic_auth_user: <username>
+  # basic_auth_pass: <password>
+  #
   # UNCOMMENT FOR CORTEX:
   # query_url: 'http://localhost:9009/api/prom'
   #
@@ -20,6 +25,10 @@ test_target_config:
   #   X-Query-Key: <insights_query_api_key>
 
 query_tweaks:
+  # UNCOMMENT FOR GRAFANA CLOUD:
+  # - note: 'Grafana cloud aligns incoming query timestamps to a multiple of 10s to enable caching.'
+  #   truncate_timestamps_to_ms: 10000
+  #
   # UNCOMMENT FOR CORTEX:
   # - note: 'Cortex is sometimes off by 1ms when parsing floating point start/end timestamps. See issue https://github.com/cortexproject/cortex/issues/2932'
   #  truncate_timestamps_to_ms: 1000
