Add staleness test query
Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/promql-compliance-tester.yml
+++ b/promql-compliance-tester.yml
@@ -86,6 +86,8 @@ test_cases:
   - query: 'demo_memory_usage_bytes offset -{{.offset}}'
     variant_args: ['offset']
     should_fail: true
+  # Test staleness handling.
+  - query: demo_intermittent_metric
 
   # Aggregation operators.
   - query: '{{.simpleAggrOp}}(demo_memory_usage_bytes)'
