feat(tests): add topBottomOp without tests
Signed-off-by: Aurelien Hebert <aurelien.hebert@corp.ovh.com>

--- a/promql-compliance-tester.yml
+++ b/promql-compliance-tester.yml
@@ -114,6 +114,10 @@ test_cases:
     variant_args: ['topBottomOp']
   - query: '{{.topBottomOp}} by(instance) (2, demo_memory_usage_bytes)'
     variant_args: ['topBottomOp']
+  - query: '{{.topBottomOp}} without(instance) (2, demo_memory_usage_bytes)'
+    variant_args: ['topBottomOp']
+  - query: '{{.topBottomOp}} without() (2, demo_memory_usage_bytes)'
+    variant_args: ['topBottomOp']
   - query: 'quantile({{.quantile}}, demo_memory_usage_bytes)'
     variant_args: ['quantile']
   - query: 'avg(max by(type) (demo_memory_usage_bytes))'
