--- a/promql-compliance-tester.yml
+++ b/promql-compliance-tester.yml
@@ -3,9 +3,14 @@ reference_target_config:
 
 test_target_config:
   # UNCOMMENT FOR GRAFANA CLOUD:
-  # query_url: 'https://<cloud-instance-name>.grafana.net/api/prom'
-  # basic_auth_user: <username>
-  # basic_auth_pass: <password>
+  # query_url: 'https://<instance-name>.grafana.net/api/prom'
+  # basic_auth_user: <user-id>
+  # basic_auth_pass: '<password>'
+  #
+  # UNCOMMENT FOR CHRONOSPHERE:
+  # query_url: 'https://<instance-name>.chronosphere.io/data/metrics'
+  # headers:
+  #   Authorization: 'Bearer <bearer-token>'
   #
   # UNCOMMENT FOR CORTEX:
   # query_url: 'http://localhost:9009/api/prom'
@@ -19,31 +24,36 @@ test_target_config:
   # UNCOMMENT FOR THANOS:
   # query_url: 'http://localhost:20902'
   #
-  # UNCOMMENT FOR NEW RELIC, replacing <insights_query_api_key>
+  # UNCOMMENT FOR NEW RELIC:
   # query_url: https://prometheus-api.newrelic.com
   # headers:
-  #   X-Query-Key: <insights_query_api_key>
+  #  X-Query-Key: <query-key>
+  #
+  # UNCOMMENT FOR M3:
+  # query_url: http://localhost:7201
+  #
+  # UNCOMMENT FOR METRICFIRE:
+  # query_url: https://www.hostedgraphite.com/<account-id>/v2/prometheus/query
+  # headers:
+  #   accept-language: 'en-US,en'
+  #   accept: 'application/json'
+  #   accept-encoding: 'br'
+  #   Cookie: 'sessionid=<session-id>;'
 
 query_tweaks:
   # UNCOMMENT FOR GRAFANA CLOUD:
-  # - note: 'Grafana cloud aligns incoming query timestamps to a multiple of 10s to enable caching.'
+  # - note: 'Grafana Cloud aligns incoming query timestamps to a multiple of the query resolution step to enable caching.'
   #   truncate_timestamps_to_ms: 10000
   #
-  # UNCOMMENT FOR CORTEX:
-  # - note: 'Cortex is sometimes off by 1ms when parsing floating point start/end timestamps. See issue https://github.com/cortexproject/cortex/issues/2932'
-  #  truncate_timestamps_to_ms: 1000
-  #
   # UNCOMMENT FOR THANOS:
-  # - note: 'Thanos is sometimes off by 1ms when parsing floating point start/end timestamps. See issue https://github.com/cortexproject/cortex/issues/2932'
-  #   truncate_timestamps_to_ms: 1000
-  # - note: 'Thanos requires adding "external_labels" to distinguish Prometheus servers, leading to extra labels in query results.'
+  # - note: 'Thanos requires adding "external_labels" to distinguish Prometheus servers, leading to extra labels in query results that need to be stripped before comparing results.'
   #   no_bug: true
   #   drop_result_labels:
-  #    - prometheus_server
+  #   - prometheus
   #
   # UNCOMMENT FOR VICTORIAMETRICS:
-  #- note: 'VictoriaMetrics incorrectly modifies incoming start/end range query timestamps to be aligned to the resolution step size.'
-  #  align_timestamps_to_step: true
+  # - note: 'VictoriaMetrics aligns incoming query timestamps to a multiple of the query resolution step.'
+  #   align_timestamps_to_step: true
   #
   # UNCOMMENT FOR NEW RELIC:
   # - note: 'New Relic is sometimes off by 1ms when parsing floating point start/end timestamps.'
@@ -54,6 +64,14 @@ query_tweaks:
   #     - prometheus_server
   # - note: 'New Relic omits the first resolution step in the output.'
   #   ignore_first_step: true
+  #
+  # UNCOMMENT FOR METRICFIRE:
+  # - note: 'MetricFire is sometimes off by 1ms when parsing floating point start/end timestamps. See underlying Cortex issue https://github.com/cortexproject/cortex/issues/2932, which still needs to be rolled out in MetricFire.'
+  #   truncate_timestamps_to_ms: 1000
+  #
+  # UNCOMMENT FOR CHRONOSPHERE:
+  # - note: 'Chronosphere rounds incoming query timestamps to a full second.'
+  #   truncate_timestamps_to_ms: 1000
 
 test_cases:
   # Scalar literals.
